tests/integration/snapshots/integration__conformance__n_object_unquoted_key.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
{a: "b"}
stderr ---
error: unexpected character `a`. expected start of a json value
 --> stdin:1:2
  |
1 | {a: "b"}
  |  ^
