tests/integration/snapshots/integration__conformance__n_string_accentuated_char_no_quotes.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
[é]
stdout ---

stderr ---
error: unexpected character `é`. expected start of a json value
 --> stdin:1:2
  |
1 | [é]
  |  ^
