tests/integration/snapshots/integration__conformance__n_string_invalid-utf-8-in-escape.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
raw bytes: [91, 34, 92, 117, 229, 34, 93]
stdout ---

stderr ---
error: expected a continuation byte, found 0x22
 --> stdin:1:5
  |
1 | ["\u�"]
  |     ^
