tests/integration/snapshots/integration__conformance__n_string_leading_uescaped_thinspace.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: ["format"]
status: 1
success: false
stdin ---
[\u0020"asd"]
stdout ---

stderr ---
error: unexpected character `\`. expected start of a json value
 --> stdin:1:2
  |
1 | [\u0020"asd"]
  |  ^
